# langchain-tutorial

./: .gitignore  README.md  multimodal.py  open_ai.ipynb  pyproject.toml  setting.ipynb
01-Basic/: 01.OpenAI-LLM.ipynb  02.LECL.ipynb  03.Runnable.ipynb  langsmith_logging.py  open_ai_api.ipynb
02-Prompt/: 01.PromptTemplate.ipynb  02.ChatPromptTemplates copy.ipynb  02.FewShotTemplates.ipynb  03.FewShotTemplates.ipynb  03.Langchain-Hub.ipynb  04.ChatPromptTemplate.ipynb  05.Personal-Prompts.ipynb
02-Prompt/prompts/: pocketmon_pokedex_template.yml
03-OuputParser/: 01.PydanticOutputParser.ipynb  02.CommaSeparatedListOutputParser.ipynb  03.StructuredOutputParser.ipynb  04.JsonOutputParser.ipynb  05.PandasDataFrameOutputParser.ipynb  06.DatetimeOutputParser.ipynb  07.EnumOutputParser.ipynb
03-OuputParser/data/: NVIDIA_latest_graphics_cards.csv
04-Model/: 01.ChatModels.ipynb  02.Cache.ipynb  04.TokenUsage.ipynb  05.GoogleGenerativeAI.ipynb  06.HuggingFace-Endpoints.ipynb  ModelSerialization.ipynb  dumpd_example_chain.json  dumpd_example_chain.pkl
04-Model/cache/: llm_cache.db
12-RAG/: 01.RAG-Basic-PDF.ipynb
14-Chains/: 02.SQL.ipynb
15-Agent/: 01.Tools.ipynb  02.Binding-Tools.ipynb  03.Agent.ipynb  04.Agent-More-LLMs.ipynb  05.Iteration-Human-in-the-Loop.ipynb  06.Agentic-RAG.ipynb  07.CSV-Excel-Agent.ipynb  08.Agent-Toolkits-File-Management.ipynb  09.Agent-Report-With-Image-Generation.ipynb
15-Agent/data/: SOL_All_graph_coinmarketcap.csv
15-Agent/tmp/: report-2.md  report-3.md  report.md
17-LangGraph/01-Core-Features/: 01.LangGraph-Introduction.ipynb  03.LangGraph-Agent.ipynb  04.LangGraph-Agent-With-Memory.ipynb  05.LangGraph-Streming-Outputs.ipynb  06.LangGraph-Human-in-thie-Loop.ipynb  07.LangGraph-Manual-State-update.ipynb  08.LangGraph-State-Customization.ipynb  09.LangGraph-DeleteMessages.ipynb  (+6 more)
18-Cookbook/: Multi-Modal.ipynb
common/: evaluators.py  graphs.py  langchain_print.py  langsmith_tracker.py  models.py
note/: open_ai_api.ipynb
(+42 files in other folders)
